--- a/app/css/main.less
+++ b/app/css/main.less
@@ -27,26 +27,11 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
 }
 
-.form-control {
-  border-width: 2px;
-}
-
-.panel-heading {
-  padding: 5px 15px;
-}
-
-.version-select {
-  width: 100px;
-  display: inline;
-  margin-left: 10px;
-}
-.form-control[readonly] {
-  cursor: auto;
-  background-color: white;
-}
-
 .zeroclipboard-is-hover {
   color: #333;
   background-color: #ebebeb;
   border-color: #adadad;
+}
+td.code {
+  padding: 13px 8px !important;
 }
